when update  save in  previousFileList
